PurchaseItem and Vendor Service Tests and Other Adjustments